--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,13 +1,16 @@
 html,
 body {
+  padding: 0;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-#__next {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
+* {
+  box-sizing: border-box;
+}
