--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,22 +1,36 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
+  padding: 0;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 #__next {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
 }
 
-.navigation-underline {
-  width: auto;
-  border: 1px solid yellowgreen;
+#nav a {
+  font-size: 14px;
+  font-weight: 200;
+  text-transform: uppercase;
 }
 
-.test {
-  position: relative;
-  display: flex;
-  flex-direction: column;
+#nav a + a {
+  margin-left: 1rem;
 }
