--- a/components/ColumnImageGallery/Photo.module.scss
+++ b/components/ColumnImageGallery/Photo.module.scss
@@ -1,5 +1,5 @@
 .container {
-  @apply absolute overflow-hidden select-none;
+  @apply absolute overflow-hidden;
 }
 
 .container > * {
@@ -12,6 +12,5 @@
 
 .container:hover .cover {
   @apply opacity-100;
-  background-color: rgb(0,0,0,0.75)
+  background-color: rgb(0,0,0,0.6)
 }
-
